[package]
name = "libzoa"
version = "0.1.0"
authors = ["Delphix"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
overflow-checks = true
incremental = true

[dependencies]
anyhow = "1.0"
async-stream = "0.3.0"
async-trait = "0.1.50"
bincode = "1.3.2"
bytes = "1.0"
futures = "0.3.13"
futures-core = "0.3.13"
# glommio = "0.4.1"
http = "0.2.4"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
lru = "0.6.5"
lz4 = "1.23.2"
metered = "0.8"
more-asserts = "0.2.1"
nix = "0.21.0"
num = "0.4.0"
nvpair = { git = "https://github.com/ahrens/rust-libzfs", branch = "work"}
rand = "0.8.3"
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"
seahash = "4.1.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0.64"
stream-reduce = "0.1.0"
tokio = { version = "1.4", features = ["full"] }
tokio-stream = "0.1.5"

[workspace]
members = [
    "server",
    "client"
]
