[package]
name = "zoa_test"
version = "0.1.0"
authors = ["Delphix"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.13"
nvpair = { git = "https://github.com/ahrens/rust-libzfs", branch = "work"}
rand = "0.8.3"
rust-s3 = "0.27.0-rc1"
rusoto_s3 = "0.46.0"
rusoto_core = "0.46.0"
tokio = { version = "1.4", features = ["full"] }
libzoa = { path = "../" }
