[package]
name = "zoa_test"
version = "0.1.0"
authors = ["Delphix"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.13"
libzoa = { path = "../" }
nvpair = { git = "https://github.com/ahrens/rust-libzfs", branch = "work"}
rand = "0.8.3"
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"
rust-s3 = "0.27.0-rc1"
tokio = { version = "1.4", features = ["full"] }
chrono = "0.4.19"
async-recursion = "0.3.2"
lazy_static = "1.4.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0.64"
