[package]
name = "zfs_object_agent"
version = "0.1.0"
authors = ["Delphix"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "2"
fern = "0.6"
zoa_common = { path = "../" }
log = "0.4"
tokio = { version = "1.4", features = ["full"] }
uuid = {version = "0.8.2", features = ["v4", "serde"]}
